tests/invalid/SetEmpty_Invalid_1.whiley
function f(int x) -> int:
    return x

method main() -> int:
    return f({})
